syntax = "proto3";

package leaseproduct;

import "google/protobuf/empty.proto";

option go_package = "./leaseproduct";

// === 基础数据结构 ===

// 租赁产品信息
message LeaseProductInfo {
  int64 id = 1;                     // 产品ID
  string productCode = 2;           // 产品编码
  string name = 3;                  // 产品名称
  string type = 4;                  // 租赁类型
  string machinery = 5;             // 设备名称
  string brand = 6;                 // 品牌
  string model = 7;                 // 型号
  double dailyRate = 8;             // 日租金
  double deposit = 9;               // 押金
  int32 maxDuration = 10;           // 最大租期(天)
  int32 minDuration = 11;           // 最小租期(天)
  string description = 12;          // 产品描述
  int32 inventoryCount = 13;        // 库存数量
  int32 availableCount = 14;        // 可用数量
  int32 status = 15;                // 状态 1:上架 2:下架
  int64 createdAt = 16;             // 创建时间
  int64 updatedAt = 17;             // 更新时间
}

// === 请求响应结构 ===

// 获取租赁产品请求
message GetLeaseProductReq {
  string productCode = 1;           // 产品编码
}

// 获取租赁产品列表请求
message ListLeaseProductsReq {
  int32 page = 1;                   // 页码
  int32 size = 2;                   // 每页数量
  string type = 3;                  // 产品类型
  string brand = 4;                 // 品牌
  int32 status = 5;                 // 状态
  string keyword = 6;               // 关键词
}

message ListLeaseProductsResp {
  repeated LeaseProductInfo list = 1; // 产品列表
  int64 total = 2;                  // 总数
}

// 创建租赁产品请求
message CreateLeaseProductReq {
  string productCode = 1;           // 产品编码
  string name = 2;                  // 产品名称
  string type = 3;                  // 产品类型
  string machinery = 4;             // 设备名称
  string brand = 5;                 // 品牌
  string model = 6;                 // 型号
  double dailyRate = 7;             // 日租金
  double deposit = 8;               // 押金
  int32 maxDuration = 9;            // 最大租期(天)
  int32 minDuration = 10;           // 最小租期(天)
  string description = 11;          // 产品描述
  int32 inventoryCount = 12;        // 库存数量
}

// 更新租赁产品请求
message UpdateLeaseProductReq {
  string productCode = 1;           // 产品编码
  string name = 2;                  // 产品名称
  string type = 3;                  // 产品类型
  string machinery = 4;             // 设备名称
  string brand = 5;                 // 品牌
  string model = 6;                 // 型号
  double dailyRate = 7;             // 日租金
  double deposit = 8;               // 押金
  int32 maxDuration = 9;            // 最大租期(天)
  int32 minDuration = 10;           // 最小租期(天)
  string description = 11;          // 产品描述
  int32 status = 12;                // 状态
}

// 删除租赁产品请求
message DeleteLeaseProductReq {
  string productCode = 1;           // 产品编码
}

// 库存检查请求
message CheckInventoryAvailabilityReq {
  string productCode = 1;           // 产品编码
  int32 quantity = 2;               // 数量
  string startDate = 3;             // 开始日期
  string endDate = 4;               // 结束日期
}

message CheckInventoryAvailabilityResp {
  bool available = 1;               // 是否可用
  int32 availableCount = 2;         // 可用数量
}

// === 服务定义 ===

service LeaseProductService {
  // 产品查询
  rpc GetLeaseProduct(GetLeaseProductReq) returns (LeaseProductInfo);
  rpc ListLeaseProducts(ListLeaseProductsReq) returns (ListLeaseProductsResp);
  
  // 产品管理
  rpc CreateLeaseProduct(CreateLeaseProductReq) returns (LeaseProductInfo);
  rpc UpdateLeaseProduct(UpdateLeaseProductReq) returns (LeaseProductInfo);
  rpc DeleteLeaseProduct(DeleteLeaseProductReq) returns (google.protobuf.Empty);
  
  // 库存检查
  rpc CheckInventoryAvailability(CheckInventoryAvailabilityReq) returns (CheckInventoryAvailabilityResp);
}

// goctl rpc protoc *.proto --go_out=../ --go-grpc_out=../  --zrpc_out=../
// sed -i "" 's/,omitempty//g' *.pb.go 